<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_product"
                android:textSize="24dip" />
        </LinearLayout>

        <!-- Name Line-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name" />

            <EditText
                android:id="@+id/et_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_product"/>
        </LinearLayout>

        <!-- Category Line-->

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category" />

            <Spinner
                android:id="@+id/large_category_spiner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:prompt="@string/large_category" />

            <Spinner
                android:id="@+id/middle_category_spiner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:prompt="@string/middle_category" />

            <Spinner
                android:id="@+id/small_category_spiner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:prompt="@string/small_category" />
        </LinearLayout>
        
 
        
        <!-- Manufacture Line -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/manufacture" />

            <EditText
                android:id="@+id/et_manufacture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/country_of_origin" />
            
            <EditText
                android:id="@+id/et_country_of_origin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>
        
        <!-- Search Button Line -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btn_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search" />
            
        </LinearLayout>   
        
        <!-- Search Result Line -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tv_search_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_result_template" />

            <Button
                android:id="@+id/btn_register_new_product"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_new_product"/>

        </LinearLayout><!-- List Title Line -->

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lv_title_name" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lv_title_lc" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lv_title_mc" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lv_title_sc" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lv_title_manufacture" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lv_title_coo" />
        </LinearLayout>
        
        <ListView
            android:id="@+id/lv"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >
        </ListView>
</LinearLayout>
</LinearLayout>