<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_new_product"
                android:textSize="24dip" />
        </LinearLayout>

        <!-- Name Line-->

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name" />

            <EditText
                android:id="@+id/et_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_product" />
        </LinearLayout>

        <!-- Category Line-->

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category" />

            <Spinner
                android:id="@+id/large_category_spiner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:prompt="@string/large_category" />

            <Spinner
                android:id="@+id/middle_category_spiner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:prompt="@string/middle_category" />

            <Spinner
                android:id="@+id/small_category_spiner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:prompt="@string/small_category" />
        </LinearLayout>
        
        <!-- Price Line -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price" />

             <EditText
                android:id="@+id/et_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bonus_point_ratio" />

            <Spinner
                android:id="@+id/bonus_point_ratio_spiner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:prompt="@string/bonus_point_ratio" />
        </LinearLayout>
        
        <!-- Delivery Fee Line -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delivery_fee" />

            <EditText
                android:id="@+id/et_delivery_fee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/average_delivery_days" />
            
            <EditText
                android:id="@+id/et_average_delivery_days_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/separator" />

			<EditText
                android:id="@+id/et_average_delivery_days_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        
        <!-- Manufacture Line -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/manufacture" />

            <EditText
                android:id="@+id/et_manufacture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/country_of_origin" />
            
            <EditText
                android:id="@+id/et_country_of_origin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>
        
        <!-- Sale Start Date Line -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sale_start_date" />

            <EditText
                android:id="@+id/et_sale_start_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sale_end_date" />
            
            <EditText
                android:id="@+id/et_sale_end_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>
     
        <!-- Minimum Order Quantity Line -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/minimum_order_quantity" />

            <EditText
                android:id="@+id/et_minimum_order_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/maximum_order_quantity" />
            
            <EditText
                android:id="@+id/et_maximum_order_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>    
        
        <!-- Description Line -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description" />

            <EditText
                android:id="@+id/et_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>   
        
        <!-- End Button Line -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btn_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save" />

            <Button
                android:id="@+id/btn_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/list"/>

        </LinearLayout>   
    </LinearLayout>
</LinearLayout>